--- a/index.html
+++ b/index.html
@@ -27,15 +27,50 @@
       <p>Any form fields that have names with an underscore between significant words, such as <b>First_Name</b> 
         will be split into separate words, for example <b>First Name</b> upon submission.</p>  
     <form method="get" action="" class="main-form">
+      
       <div>
         <label for="FirstName">First Name</label><br>
         <input type="text" name="First_Name" id="FirstName" placeholder="First Name" required autofocus>
       </div>
+      
+      <div>
+        <label for="LastName">Last Name</label><br>
+        <input type="text" name="Last_Name" id="LastName" placeholder="Last Name" required>
+      </div>
+
+      <div>
+        <label for="Phone">Phone</label><br>
+        <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx" required>
+      </div>
+
+      <div>
+        <fieldset>
+          <legend>Would you like tom join our mailling list?</legend>
+          <label>
+            <input type="radio" name="Mailling_list" value="yes" required> Yes<br>
+            <input type="radio" name="Mailling_list" value="No"> no<br>
+          </label>
+        </fieldset>
+      </div>
+
+      <div>
+        <fieldset>
+          <legend>Interested In?</legend>
+          <label>
+            <input type="checkbox" name="Interested_In" value="Website"> Website<br>
+            <input type="checkbox" name="Interested_In" value="Shoping Cart"> Shoping Cart<br>
+            <input type="checkbox" name="Interested_In" value="JS Thingy"> JS Thingy<br>
+            <input type="checkbox" name="Interested_In" value="Loillipops"> Customary Loillipops
+          </label>
+        </fieldset>
+      </div>
+
       <div>
         <input type="submit">
       </div>
     </form>
   </div>
+
     <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
           YOUR NAME HERE, All Rights Reserved ~ 
