added text and state

--- a/index.html
+++ b/index.html
@@ -58,11 +58,28 @@
           <legend>Interested In?</legend>
           <label>
             <input type="checkbox" name="Interested_In" value="Website"> Website<br>
-            <input type="checkbox" name="Interested_In" value="Shoping Cart"> Shoping Cart<br>
+            <input type="checkbox" name="Interested_In" value="Shopping Cart"> Shopping Cart<br>
             <input type="checkbox" name="Interested_In" value="JS Thingy"> JS Thingy<br>
             <input type="checkbox" name="Interested_In" value="Loillipops"> Customary Loillipops
           </label>
         </fieldset>
+      </div>
+
+      <div>
+        <label for="State">State</label><br>
+        <select id="State" name="State" required>
+          <option value="">Please enter state</option>
+          <option value="AK">Alaska</option>
+          <option value="CA">California</option>
+          <option value="OR">Oregon</option>
+          <option value="WA">Washington
+          </option>
+        </select>
+      </div>
+      <label for="Note">Note</label><br>
+      <textarea id="Note" name="Note" placeholder="Place Any Special Instructions In Here" rows="4" cols="42"></textarea>
+      <div>
+
       </div>
 
       <div>
